# osrs-bank-api

./: package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: ci.yml  deploy.yml
scripts/: create-local-table.py
src/osrs_items_api/: _tablespec.py  api.py  constants.py  dynamodb.py  items_service.py  logging.py  tags_service.py  types.py
tests/: test_osrs_items_api.py
tests/integration/: conftest.py  helpers.py  test_api.py  test_tags_service.py
